# omne-validator

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
config/: example.toml  networks.toml
docs/: ARCHITECTURE.md  BRANDING.md  DESIGN_DECISIONS.md
src/: config.rs  consensus.rs  infrastructure.rs  main.rs  p2p.rs  rpc.rs  utils.rs  validator.rs
