[package]
name = "omne-nexus"
version = "1.0.0"
edition = "2021"
authors = ["Omne Network <dev@omne.network>"]
description = "High-performance validator node for the Omne blockchain network - the definitive solution for PoVERA consensus participation"
homepage = "https://omne.network"
repository = "https://github.com/omne-network/omne-nexus"
license = "Apache-2.0"
keywords = ["blockchain", "validator", "consensus", "crypto", "omne", "nexus", "povera"]
categories = ["cryptography", "network-programming"]
readme = "README.md"

[[bin]]
name = "omne-nexus"
path = "src/main.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
ed25519-dalek = "2.0"
sha2 = "0.10"
blake3 = "1.5"
rand = "0.8"

# Networking
libp2p = { version = "0.52", features = [
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "mdns",
    "kad",
    "identify",
    "ping",
    "autonat",
    "tokio",
    "macros"
]}
libp2p-swarm = "0.43"

# Storage and serialization
sled = "0.34"
bincode = "1.3"
dirs = "5.0"
toml = "0.8"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Time and utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# BLS signatures for consensus
bls12_381 = "0.8"
group = "0.13"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
overflow-checks = true
